# docs/swagger.json
@@ -52,6 +52,17 @@
         }
     },
     "definitions": {
+        "models.Role": {
+            "type": "string",
+            "enum": [
+                "manager",
+                "employee"
+            ],
+            "x-enum-varnames": [
+                "Manager",
+                "Employee"
+            ]
+        },
         "requests.UserLoginRequest": {
             "type": "object",
             "required": [
@@ -70,9 +81,6 @@
         "responses.UserLoginResponse": {
             "type": "object",
             "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -82,10 +90,10 @@
                 "name": {
                     "type": "string"
                 },
-                "token": {
-                    "type": "string"
+                "role": {
+                    "$ref": "#/definitions/models.Role"
                 },
-                "updatedAt": {
+                "token": {
                     "type": "string"
                 }
             }
