# main.go
@@ -3,11 +3,14 @@ package main
 import (
 	"github.com/cs471-buffetpos/buffet-pos-backend/bootstrap"
 	"github.com/cs471-buffetpos/buffet-pos-backend/configs"
+	"github.com/cs471-buffetpos/buffet-pos-backend/domain/models"
 	"github.com/cs471-buffetpos/buffet-pos-backend/domain/usecases"
 	"github.com/cs471-buffetpos/buffet-pos-backend/internal/adapters/gorm"
+	"github.com/cs471-buffetpos/buffet-pos-backend/internal/adapters/middleware"
 	"github.com/cs471-buffetpos/buffet-pos-backend/internal/adapters/rest"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/swagger"
+	"github.com/golang-jwt/jwt"
 
 	_ "github.com/cs471-buffetpos/buffet-pos-backend/docs"
 )
@@ -31,8 +34,15 @@ func main() {
 		return c.SendString("BuffetPOS is running 🎉")
 	})
 
-	app.Post("/register", userHandler.Register)
-	app.Post("/login", userHandler.Login)
+	auth := app.Group("/auth")
+	auth.Post("/register", userHandler.Register)
+	auth.Post("/login", userHandler.Login)
+
+	manage := app.Group("/manage", middleware.AuthMiddleware(cfg), middleware.RoleMiddleware(models.Employee, models.Manager))
+	manage.Get("/", func(c *fiber.Ctx) error {
+		claims := c.Locals("user").(jwt.MapClaims)
+		return c.SendString("Manage page for " + claims["email"].(string))
+	})
 
 	app.Listen(":3000")
 }
